--- a/register.html
+++ b/register.html
@@ -1,31 +1,62 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 <head>
-  <meta charset="UTF-8" /><meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <script>document.documentElement.setAttribute("data-theme", localStorage.getItem("theme")||"light");</script>
-  <title>Register – Khotwa</title>
-  <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Register - Khotwa Council</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+
+  <!-- Navbar -->
   <header class="navbar">
-    <div class="logo">KHOTWA COUNCIL</div>
+    <div class="logo">KHOTWA</div>
     <nav class="nav-container">
-      <!-- nav-links -->
-      <button id="darkToggle" class="dark-btn">🌙</button>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="calendar.html">Calendar</a></li>
+        <li><a href="admin.html">Admin</a></li>
+      </ul>
+      <button id="darkToggle" class="dark-btn">🌓</button>
     </nav>
   </header>
+
+  <!-- Register Section -->
   <section class="section">
-    <h2>Student Registration</h2>
-    <form id="regForm">
-      <input type="text" id="name" placeholder="Name" required>
-      <input type="email" id="email" placeholder="Email" required>
-      <input type="text" id="major" placeholder="Major" required>
-      <select id="level" required><option value="">Level</option><option>1st Year</option>…</select>
+    <h2>Register New Account</h2>
+    <form id="registerForm">
+      <input type="text" name="name" placeholder="Full Name" required />
+      <input type="email" name="email" placeholder="Email Address" required />
+      <input type="password" name="password" id="password" placeholder="Password" required />
+      <input type="password" name="confirm" id="confirm" placeholder="Confirm Password" required />
+      <small id="message" style="color: red; display: none;">Passwords do not match</small>
       <button type="submit">Register</button>
     </form>
   </section>
-  <footer class="footer">&copy; 2025 KHOTWA Student Council</footer>
+
+  <!-- Footer -->
+  <footer class="footer">
+    <p>© 2025 Khotwa Student Council</p>
+  </footer>
+
+  <!-- Scripts -->
   <script src="dark-toggle.js"></script>
-  <script src="script.js"></script>
+  <script>
+    // تأكد من تطابق كلمتي المرور
+    const form = document.getElementById("registerForm");
+    const pass = document.getElementById("password");
+    const confirm = document.getElementById("confirm");
+    const message = document.getElementById("message");
+
+    form.addEventListener("submit", function(e) {
+      if (pass.value !== confirm.value) {
+        e.preventDefault();
+        message.style.display = "block";
+      } else {
+        message.style.display = "none";
+        alert("تم التسجيل بنجاح!");
+      }
+    });
+  </script>
 </body>
 </html>
