--- a/index.html
+++ b/index.html
@@ -13,14 +13,13 @@
     <div class="logo">KHOTWA COUNCIL</div>
     <nav class="nav-container">
       <ul class="nav-links">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#events">Events</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li><a href="calendar.html">Calendar</a></li>
-        <li><a href="register.html">Register</a></li>
-        <li><a href="admin.html">Admin</a></li>
-      </ul>
+  <li><a href="index.html">Home</a></li>
+  <li><a href="calendar.html">Calendar</a></li>
+  <li><a href="register.html">Register</a></li>
+  <li><a href="admin.html">Admin</a></li>
+  <li><a href="contact.html">Contact</a></li> <!-- جديد -->
+  <li><a href="profile.html">Profile</a></li> <!-- جديد -->
+</ul>
       <button id="darkToggle" class="dark-btn">🌓</button>
     </nav>
   </header>
