--- a/contact.html
+++ b/contact.html
@@ -28,11 +28,14 @@
   <header class="navbar">
     <div class="logo">KHOTWA</div>
     <nav class="nav-container">
-      <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="calendar.html">Calendar</a></li>
-        <li><a href="admin.html">Admin</a></li>
-      </ul>
+   <ul class="nav-links">
+  <li><a href="index.html">Home</a></li>
+  <li><a href="calendar.html">Calendar</a></li>
+  <li><a href="register.html">Register</a></li>
+  <li><a href="admin.html">Admin</a></li>
+  <li><a href="contact.html">Contact</a></li> <!-- جديد -->
+  <li><a href="profile.html">Profile</a></li> <!-- جديد -->
+</ul>
       <button id="darkToggle" class="dark-btn">🌓</button>
     </nav>
   </header>
