--- a/profile.html
+++ b/profile.html
@@ -59,3 +59,54 @@
       display: none;
     }
   </style>
+</head>
+<body>
+
+  <!-- Navbar -->
+  <header class="navbar">
+    <div class="logo">KHOTWA</div>
+    <nav class="nav-container">
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="calendar.html">Calendar</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+      <button id="darkToggle" class="dark-btn">🌓</button>
+    </nav>
+  </header>
+
+  <!-- Profile Form -->
+  <section class="profile-container">
+    <h2>My Profile</h2>
+    <form id="profileForm">
+      <label for="username">Full Name</label>
+      <input type="text" id="username" value="Ahmad Al-Khotwa" required />
+
+      <label for="email">Email</label>
+      <input type="email" id="email" value="ahmad@example.com" required />
+
+      <label for="role">Role</label>
+      <input type="text" id="role" value="Council Member" readonly />
+
+      <button type="submit">Update Profile</button>
+      <div class="update-msg" id="updateMsg">✅ Profile updated successfully!</div>
+    </form>
+  </section>
+
+  <footer class="footer">
+    <p>© 2025 Khotwa Student Council</p>
+  </footer>
+
+  <script src="dark-toggle.js"></script>
+  <script>
+    document.getElementById("profileForm").addEventListener("submit", function(e) {
+      e.preventDefault();
+      const msg = document.getElementById("updateMsg");
+      msg.style.display = "block";
+      setTimeout(() => {
+        msg.style.display = "none";
+      }, 3000);
+    });
+  </script>
+</body>
+</html>
