--- a/admin.html
+++ b/admin.html
@@ -3,66 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Admin Dashboard – Khotwa</title>
+  <title>Advanced Admin Panel – Khotwa</title>
   <link rel="stylesheet" href="styles.css" />
   <style>
-    .dashboard-header {
-      text-align: center;
-      margin-bottom: 2rem;
-    }
-
-    .filter-bar {
-      display: flex;
-      justify-content: space-between;
-      flex-wrap: wrap;
-      gap: 1rem;
-      margin-bottom: 1rem;
-    }
-
-    .filter-bar input {
-      flex: 1;
-      padding: 0.7rem;
-      border-radius: 5px;
-      border: 1px solid #ccc;
-    }
-
-    .admin-controls button {
-      padding: 0.7rem 1.2rem;
-      border-radius: 5px;
-      background-color: var(--green);
-      color: var(--white);
-      border: none;
-      cursor: pointer;
-      font-weight: bold;
-    }
-
-    .admin-controls button:hover {
-      background-color: #005f35;
-    }
-
-    .admin-table th {
-      background-color: var(--btn-bg);
-      color: var(--btn-text);
-    }
-
-    .admin-table td,
-    .admin-table th {
-      text-align: center;
-    }
-
-    .action-btns button {
-      background: none;
-      border: none;
-      font-size: 1.2rem;
-      cursor: pointer;
-      margin: 0 4px;
-    }
-
-    @media (max-width: 600px) {
-      .filter-bar {
-        flex-direction: column;
-      }
-    }
+    .stats-cards { display: flex; gap: 1rem; flex-wrap: wrap; margin-bottom: 2rem; }
+    .stat-card { flex: 1; min-width: 180px; background: var(--card-bg); padding: 1.2rem; border-radius: 8px;
+      box-shadow: 0 1px 6px rgba(0,0,0,0.1); position: relative; }
+    .stat-card h3 { margin: 0; font-size: 1rem; color: var(--text); }
+    .stat-card p { font-size: 2rem; margin: 0.5rem 0; color: var(--btn-bg); }
+    .chart-container { max-width: 600px; margin: auto 0 2rem; padding: 1rem; background: var(--card-bg);
+      border-radius: 8px; box-shadow: 0 1px 6px rgba(0,0,0,0.1); }
   </style>
 </head>
 <body>
@@ -83,17 +33,29 @@
     </nav>
   </header>
 
-  <!-- Admin Dashboard -->
   <section class="section">
     <div class="dashboard-header">
-      <h2>لوحة تحكم المسؤولين</h2>
-      <p>إدارة الأعضاء والمستخدمين في منصة خطوة</p>
+      <h2>لوحة تحكم متقدمة</h2>
+      <p>إحصائيات وتقارير لمستخدمي المنصة</p>
     </div>
 
+    <!-- إحصائيات -->
+    <div class="stats-cards">
+      <div class="stat-card"><h3>Users</h3><p id="countUsers">--</p></div>
+      <div class="stat-card"><h3>Events</h3><p id="countEvents">--</p></div>
+      <div class="stat-card"><h3>Messages</h3><p id="countMessages">--</p></div>
+    </div>
+
+    <!-- Chart -->
+    <div class="chart-container">
+      <canvas id="userGrowthChart"></canvas>
+    </div>
+
+    <!-- Filter + Controls + Table -->
     <div class="filter-bar">
-      <input type="text" id="searchInput" placeholder="🔍 ابحث عن اسم أو بريد..." onkeyup="searchTable()" />
+      <input type="text" id="searchInput" placeholder="🔍 Search name or email..." onkeyup="searchTable()" />
       <div class="admin-controls">
-        <button onclick="addRow()">➕ إضافة مستخدم</button>
+        <button onclick="addRow()">➕ Add User</button>
       </div>
     </div>
 
@@ -101,25 +63,10 @@
       <table class="admin-table">
         <thead>
           <tr>
-            <th>#</th>
-            <th>الاسم</th>
-            <th>البريد الإلكتروني</th>
-            <th>الدور</th>
-            <th>إجراءات</th>
+            <th>#</th><th>Name</th><th>Email</th><th>Role</th><th>Actions</th>
           </tr>
         </thead>
-        <tbody id="adminTableBody">
-          <tr>
-            <td>1</td>
-            <td>أحمد محمد</td>
-            <td>ahmad@email.com</td>
-            <td>عضو</td>
-            <td class="action-btns">
-              <button onclick="editRow(this)">✏️</button>
-              <button onclick="deleteRow(this)">🗑️</button>
-            </td>
-          </tr>
-        </tbody>
+        <tbody id="adminTableBody"></tbody>
       </table>
     </div>
   </section>
@@ -128,60 +75,9 @@
     <p>© 2025 Khotwa Student Council</p>
   </footer>
 
+  <!-- Chart.js CDN -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="dark-toggle.js"></script>
-  <script>
-    function deleteRow(btn) {
-      const row = btn.closest("tr");
-      row.remove();
-    }
-
-    function editRow(btn) {
-      const row = btn.closest("tr");
-      const name = prompt("أدخل الاسم الجديد:", row.children[1].innerText);
-      const email = prompt("أدخل البريد الجديد:", row.children[2].innerText);
-      const role = prompt("أدخل الدور الجديد:", row.children[3].innerText);
-
-      if (name && email && role) {
-        row.children[1].innerText = name;
-        row.children[2].innerText = email;
-        row.children[3].innerText = role;
-      }
-    }
-
-    function addRow() {
-      const tbody = document.getElementById("adminTableBody");
-      const row = document.createElement("tr");
-
-      const id = tbody.children.length + 1;
-      const name = prompt("الاسم:");
-      const email = prompt("البريد الإلكتروني:");
-      const role = prompt("الدور:");
-
-      if (name && email && role) {
-        row.innerHTML = `
-          <td>${id}</td>
-          <td>${name}</td>
-          <td>${email}</td>
-          <td>${role}</td>
-          <td class="action-btns">
-            <button onclick="editRow(this)">✏️</button>
-            <button onclick="deleteRow(this)">🗑️</button>
-          </td>
-        `;
-        tbody.appendChild(row);
-      }
-    }
-
-    function searchTable() {
-      const input = document.getElementById("searchInput").value.toLowerCase();
-      const rows = document.querySelectorAll("#adminTableBody tr");
-
-      rows.forEach(row => {
-        const name = row.children[1].innerText.toLowerCase();
-        const email = row.children[2].innerText.toLowerCase();
-        row.style.display = name.includes(input) || email.includes(input) ? "" : "none";
-      });
-    }
-  </script>
+  <script src="admin_advanced.js"></script>
 </body>
 </html>
