--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Khotwa Student Council</title>
   <link rel="stylesheet" href="styles.css" />
+
+  <!-- AOS Animation -->
+  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet" />
 </head>
 <body>
 
@@ -13,56 +16,75 @@
     <div class="logo">KHOTWA COUNCIL</div>
     <nav class="nav-container">
       <ul class="nav-links">
-  <li><a href="index.html">Home</a></li>
-  <li><a href="calendar.html">Calendar</a></li>
-  <li><a href="register.html">Register</a></li>
-  <li><a href="admin.html">Admin</a></li>
-  <li><a href="contact.html">Contact</a></li> <!-- جديد -->
-  <li><a href="profile.html">Profile</a></li> <!-- جديد -->
-</ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="calendar.html">Calendar</a></li>
+        <li><a href="register.html">Register</a></li>
+        <li><a href="admin.html">Admin</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="profile.html">Profile</a></li>
+      </ul>
       <button id="darkToggle" class="dark-btn">🌓</button>
     </nav>
   </header>
 
   <!-- Hero Section -->
-  <section id="home" class="hero">
+  <section id="home" class="hero" data-aos="fade-up">
     <div class="hero-content">
-      <h1>Welcome to Khotwa Student Council</h1>
+      <h1>Welcome to <span style="color: var(--green)">Khotwa</span></h1>
       <p>Empowering student voice. Leading with impact.</p>
-      <a href="#about" class="primary-btn">Learn More</a>
+      <a href="#about" class="primary-btn">Explore More</a>
     </div>
   </section>
 
   <!-- About Section -->
-  <section id="about" class="section about-section">
+  <section id="about" class="section about-section" data-aos="fade-right">
     <div class="about-text">
-      <h2>About Khotwa</h2>
-      <p>Khotwa is a student council that aims to bridge the gap between students and the administration, ensuring every voice is heard.</p>
+      <h2>Who Are We?</h2>
+      <p>Khotwa is a student council that bridges students and leadership. We empower, represent, and connect.</p>
     </div>
     <div class="about-image">
       <img src="https://i.top4top.io/p_3497a12jc1.jpg" alt="Khotwa Team" />
     </div>
   </section>
 
+  <!-- Stats Section -->
+  <section class="section stats" data-aos="zoom-in">
+    <h2>Our Impact</h2>
+    <div class="stats-grid">
+      <div class="stat-card">
+        <h3>👥 150+</h3>
+        <p>Members</p>
+      </div>
+      <div class="stat-card">
+        <h3>📚 25+</h3>
+        <p>Events</p>
+      </div>
+      <div class="stat-card">
+        <h3>📈 4 Years</h3>
+        <p>Of Growth</p>
+      </div>
+    </div>
+  </section>
+
   <!-- Events Section -->
-  <section id="events" class="section">
+  <section id="events" class="section" data-aos="fade-up">
     <h2>Upcoming Events</h2>
     <ul class="event-cards">
-      <li class="card-event">
+      <li class="card-event" data-aos="fade-up">
         <img src="images/event1.jpg" alt="Event 1" />
         <h3>Orientation Week</h3>
-        <p>Join us in welcoming new students!</p>
+        <p>Welcome new students to the journey!</p>
       </li>
-      <li class="card-event">
+      <li class="card-event" data-aos="fade-up" data-aos-delay="100">
         <img src="images/event2.jpg" alt="Event 2" />
         <h3>Tech Talk</h3>
-        <p>Discussion on AI, Web & Innovation.</p>
+        <p>AI, Web & Future Innovation meetup.</p>
       </li>
     </ul>
   </section>
 
   <!-- Contact Section -->
-  <section id="contact" class="section">
+  <section id="contact" class="section" data-aos="fade-up">
     <h2>Contact Us</h2>
     <form>
       <input type="text" placeholder="Your Name" required />
@@ -77,6 +99,9 @@
     <p>© 2025 Khotwa Student Council. All rights reserved.</p>
   </footer>
 
+  <!-- Scripts -->
   <script src="dark-toggle.js"></script>
+  <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
+  <script>AOS.init({ duration: 1000, once: true });</script>
 </body>
 </html>
