--- a/index.html
+++ b/index.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="light">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Khotwa Student Council</title>
-  <link rel="stylesheet" href="styles.css" />
-
-  <!-- AOS Animation -->
-  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet" />
+  <link rel="stylesheet" href="styles.css"/>
+  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet"/>
 </head>
 <body>
 
   <!-- Navbar -->
-  <header class="navbar">
+  <header class="navbar" data-aos="fade-down">
     <div class="logo">KHOTWA COUNCIL</div>
     <nav class="nav-container">
       <ul class="nav-links">
@@ -27,81 +25,69 @@
     </nav>
   </header>
 
-  <!-- Hero Section -->
-  <section id="home" class="hero" data-aos="fade-up">
+  <!-- Hero -->
+  <section id="home" class="hero" data-aos="fade-up" data-aos-delay="200">
     <div class="hero-content">
-      <h1>Welcome to <span style="color: var(--green)">Khotwa</span></h1>
+      <h1>Welcome to <span class="text-green">Khotwa</span></h1>
       <p>Empowering student voice. Leading with impact.</p>
-      <a href="#about" class="primary-btn">Explore More</a>
+      <a href="#about" class="primary-btn">Explore Khotwa</a>
     </div>
   </section>
 
-  <!-- About Section -->
-  <section id="about" class="section about-section" data-aos="fade-right">
+  <!-- About -->
+  <section id="about" class="section about-section" data-aos="fade-right" data-aos-delay="300">
     <div class="about-text">
       <h2>Who Are We?</h2>
-      <p>Khotwa is a student council that bridges students and leadership. We empower, represent, and connect.</p>
+      <p>Khotwa bridges students and leadership. We empower, represent, connect.</p>
     </div>
     <div class="about-image">
-      <img src="https://i.top4top.io/p_3497a12jc1.jpg" alt="Khotwa Team" />
+      <img src="https://i.top4top.io/p_3497a12jc1.jpg" alt="Team Photo"/>
     </div>
   </section>
 
-  <!-- Stats Section -->
-  <section class="section stats" data-aos="zoom-in">
+  <!-- Impact Stats -->
+  <section class="section stats" data-aos="zoom-in" data-aos-delay="400">
     <h2>Our Impact</h2>
     <div class="stats-grid">
-      <div class="stat-card">
-        <h3>👥 150+</h3>
-        <p>Members</p>
-      </div>
-      <div class="stat-card">
-        <h3>📚 25+</h3>
-        <p>Events</p>
-      </div>
-      <div class="stat-card">
-        <h3>📈 4 Years</h3>
-        <p>Of Growth</p>
-      </div>
+      <div class="stat-card"><h3>👥 150+</h3><p>Members</p></div>
+      <div class="stat-card"><h3>📚 25+</h3><p>Events</p></div>
+      <div class="stat-card"><h3>📈 4 Years</h3><p>Growth</p></div>
     </div>
   </section>
 
-  <!-- Events Section -->
-  <section id="events" class="section" data-aos="fade-up">
+  <!-- Upcoming Events -->
+  <section id="events" class="section" data-aos="fade-up" data-aos-delay="500">
     <h2>Upcoming Events</h2>
     <ul class="event-cards">
       <li class="card-event" data-aos="fade-up">
-        <img src="images/event1.jpg" alt="Event 1" />
+        <img src="images/event1.jpg" alt="Orientation"/>
         <h3>Orientation Week</h3>
-        <p>Welcome new students to the journey!</p>
+        <p>Welcome new students to the journey.</p>
       </li>
       <li class="card-event" data-aos="fade-up" data-aos-delay="100">
-        <img src="images/event2.jpg" alt="Event 2" />
+        <img src="images/event2.jpg" alt="Tech Talk"/>
         <h3>Tech Talk</h3>
-        <p>AI, Web & Future Innovation meetup.</p>
+        <p>AI, Web & Innovation session.</p>
       </li>
     </ul>
   </section>
 
-  <!-- Contact Section -->
-  <section id="contact" class="section" data-aos="fade-up">
+  <!-- Contact Preview -->
+  <section id="contact" class="section" data-aos="fade-up" data-aos-delay="600">
     <h2>Contact Us</h2>
-    <form>
-      <input type="text" placeholder="Your Name" required />
-      <input type="email" placeholder="Your Email" required />
-      <textarea placeholder="Your Message" required></textarea>
-      <button type="submit">Send</button>
-    </form>
+    <a href="contact.html" class="primary-btn">Get In Touch</a>
   </section>
 
   <!-- Footer -->
-  <footer class="footer">
+  <footer class="footer" data-aos="fade-up">
     <p>© 2025 Khotwa Student Council. All rights reserved.</p>
   </footer>
 
   <!-- Scripts -->
   <script src="dark-toggle.js"></script>
   <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
-  <script>AOS.init({ duration: 1000, once: true });</script>
+  <script>
+    AOS.init({ duration: 800, once: true });
+  </script>
 </body>
 </html>
