--- a/contact.html
+++ b/contact.html
@@ -3,70 +3,98 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contact Us – Khotwa</title>
+  <title>Contact – Khotwa</title>
   <link rel="stylesheet" href="styles.css" />
+  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet" />
   <style>
-    .contact-form {
-      max-width: 600px;
-      margin: auto;
-      padding: 2rem 1rem;
+    .contact-grid {
+      display: grid;
+      gap: 2rem;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      margin-top: 2rem;
     }
-    .contact-form textarea {
-      resize: vertical;
-      min-height: 120px;
+
+    .contact-info {
+      text-align: left;
     }
-    .confirmation {
-      color: green;
+
+    .contact-info h3 {
+      margin-bottom: 1rem;
+    }
+
+    .contact-info p {
+      margin-bottom: 0.7rem;
+    }
+
+    .form-section {
+      background-color: var(--card-bg);
+      padding: 2rem;
+      border-radius: 10px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    }
+
+    .success-msg {
       margin-top: 1rem;
+      color: green;
+      text-align: center;
       display: none;
     }
   </style>
 </head>
 <body>
 
-  <!-- Navbar -->
-  <header class="navbar">
-    <div class="logo">KHOTWA</div>
-    <nav class="nav-container">
-   <ul class="nav-links">
-  <li><a href="index.html">Home</a></li>
-  <li><a href="calendar.html">Calendar</a></li>
-  <li><a href="register.html">Register</a></li>
-  <li><a href="admin.html">Admin</a></li>
-  <li><a href="contact.html">Contact</a></li> <!-- جديد -->
-  <li><a href="profile.html">Profile</a></li> <!-- جديد -->
-</ul>
-      <button id="darkToggle" class="dark-btn">🌓</button>
-    </nav>
-  </header>
+<header class="navbar" data-aos="fade-down">
+  <div class="logo">KHOTWA COUNCIL</div>
+  <nav class="nav-container">
+    <ul class="nav-links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="calendar.html">Calendar</a></li>
+      <li><a href="register.html">Register</a></li>
+      <li><a href="admin.html">Admin</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="profile.html">Profile</a></li>
+    </ul>
+    <button id="darkToggle" class="dark-btn">🌓</button>
+  </nav>
+</header>
 
-  <!-- Contact Form -->
-  <section class="section">
-    <h2>Contact Us</h2>
-    <form class="contact-form" id="contactForm">
-      <input type="text" name="name" placeholder="Your Name" required />
-      <input type="email" name="email" placeholder="Your Email" required />
-      <textarea name="message" placeholder="Your Message" required></textarea>
-      <button type="submit">Send Message</button>
-      <div class="confirmation" id="confirmationMsg">✅ Message sent successfully!</div>
-    </form>
-  </section>
+<section class="section" data-aos="fade-up">
+  <h2>Contact Us</h2>
 
-  <footer class="footer">
-    <p>© 2025 Khotwa Student Council</p>
-  </footer>
+  <div class="contact-grid">
+    <div class="contact-info">
+      <h3>Reach Out</h3>
+      <p>📧 Email: support@khotwa.edu</p>
+      <p>📞 Phone: +966 555 123 456</p>
+      <p>📍 Location: University Campus, Building B</p>
+    </div>
 
-  <!-- Scripts -->
-  <script src="dark-toggle.js"></script>
-  <script>
-    const form = document.getElementById('contactForm');
-    const confirmation = document.getElementById('confirmationMsg');
+    <div class="form-section">
+      <form id="contactForm">
+        <input type="text" placeholder="Your Name" required />
+        <input type="email" placeholder="Your Email" required />
+        <textarea placeholder="Your Message" required></textarea>
+        <button type="submit">Send Message</button>
+        <div class="success-msg" id="successMsg">✅ Message sent successfully!</div>
+      </form>
+    </div>
+  </div>
+</section>
 
-    form.addEventListener('submit', function(e) {
-      e.preventDefault();
-      confirmation.style.display = 'block';
-      form.reset();
-    });
-  </script>
+<footer class="footer" data-aos="fade-up">
+  <p>© 2025 Khotwa Student Council</p>
+</footer>
+
+<script src="dark-toggle.js"></script>
+<script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
+<script>
+  AOS.init({ duration: 700, once: true });
+
+  document.getElementById('contactForm').addEventListener('submit', function(e) {
+    e.preventDefault();
+    document.getElementById('successMsg').style.display = 'block';
+    this.reset();
+  });
+</script>
 </body>
 </html>
