--- a/admin.html
+++ b/admin.html
@@ -77,7 +77,7 @@
 
   <!-- Chart.js CDN -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="dark-toggle.js"></script>
+ <script src="main.js"></script>
   <script src="admin_advanced.js"></script>
 </body>
 </html>
