--- a/contact.html
+++ b/contact.html
@@ -85,7 +85,7 @@
   <p>© 2025 Khotwa Student Council</p>
 </footer>
 
-<script src="dark-toggle.js"></script>
+<script src="main.js"></script>
 <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
 <script>
   AOS.init({ duration: 700, once: true });
