--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   </footer>
 
   <!-- Scripts -->
-  <script src="dark-toggle.js"></script>
+ <script src="main.js"></script>
   <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
   <script>
     AOS.init({ duration: 800, once: true });
