--- a/register.html
+++ b/register.html
@@ -58,7 +58,7 @@
     <p>© 2025 Khotwa Student Council. All rights reserved.</p>
   </footer>
 
-  <script src="dark-toggle.js"></script>
+ <script src="main.js"></script>
   <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
   <script>
     AOS.init({ duration: 1000, once: true });
